switch to AEM 6.5 dependencies

--- a/aem-mock/parent/pom.xml
+++ b/aem-mock/parent/pom.xml
@@ -69,6 +69,14 @@
     <dependencies>
 
       <dependency>
+        <groupId>io.wcm.maven</groupId>
+        <artifactId>io.wcm.maven.aem-dependencies</artifactId>
+        <version>6.5.0.0004</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+
+      <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-simple</artifactId>
         <version>1.7.25</version>
