--- a/aem-mock/parent/pom.xml
+++ b/aem-mock/parent/pom.xml
@@ -70,8 +70,8 @@
 
       <dependency>
         <groupId>io.wcm.maven</groupId>
-        <artifactId>io.wcm.maven.aem-dependencies</artifactId>
-        <version>6.5.10.0000-SNAPSHOT</version>
+        <artifactId>io.wcm.maven.aem-cloud-dependencies</artifactId>
+        <version>2021.9.5852.20210917T073206Z-210800.0000</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
